<resources>
    <string name="app_name">SecureLocate</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码 </string>
    <string name="confirm_password">确认密码</string>
    <string name="user_sex">性别</string>
    <string name="user_name">昵称</string>
    <string name="action_sign_in">登录</string>
    <string name="action_regist">注册</string>
    <string name="find_password">找回密码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
