<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    >
    <RelativeLayout
        android:id="@+id/top_relative_login"
        android:layout_width="match_parent"
        android:background="#106184"
        android:layout_height="50.0dip" >
        <ImageButton
            android:id="@+id/Login_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/titleText_login"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="登录"
            android:textColor="#EDEDED"
            android:textSize="15dp" />
    </RelativeLayout>

   <f_app.dmx.com.securelocate.RoundImageView
       android:layout_width="85dp"
       android:layout_height="85dp"
       android:src="@drawable/coton"
       android:layout_above="@+id/email_login_form"
       android:layout_centerHorizontal="true">

   </f_app.dmx.com.securelocate.RoundImageView>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="昵称/邮箱/手机号码"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/login_password_checkbox"
                    android:layout_weight="1"
                   android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_edittext"
                    android:layout_marginLeft="12dip"
                    android:text="记住密码"
                    android:textColor="#000000" />
                <CheckBox
                    android:id="@+id/login_auto_checkbox"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_edittext"
                    android:layout_marginRight="12dip"
                    android:text="自动登录"
                    android:textColor="#000000" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                android:id="@+id/email_regist_button"
                style="?android:textAppearanceSmall"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textSize="24dp"
                android:gravity="center"
                android:textStyle="bold"
                    android:layout_width="wrap_content" />
                <Button
                    android:id="@+id/login_regist_button"
                    style="?android:textAppearanceSmall"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="注册"
                    android:textSize="24dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_width="wrap_content" />
            </LinearLayout>

        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/icon_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/new_button"
            android:layout_centerHorizontal="true">
            <ImageButton
                android:id="@+id/QQ_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qq"/>
            <ImageButton
                android:id="@+id/weichat_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/weixin"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="找回密码"
            android:id="@+id/new_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </LinearLayout>


</RelativeLayout>

